# hmm-project

./: .gitignore  BACKLOG.md  README.md  pyproject.toml  week1.ipynb  week2.ipynb  week4.ipynb  week5.ipynb  week6.ipynb  week_3.ipynb
R-Files/: CHAPTER_02.R  CHAPTER_04.R  CHAPTER_05.R  CHAPTER_06.R  CHAPTER_08.R  CHAPTER_11.R
R-Files/cpp-files/: window2.cpp  windowVonM2.cpp
R-Files/functions/: chap09funs.R  flowChartDatNew.R  flowChartReadNew.R  logistic_cdf.R
data/: exCeilingFan_data.csv  windatGlmm.csv
docs/API/: v4.md
examples/R-Files/: CHAPTER_01.R  CHAPTER_03.R  CHAPTER_07.R  CHAPTER_09.R  CHAPTER_10.R  CHAPTER_11.R
examples/R-Files/data/: survocc.csv
examples/R-Files/functions/: markovPlot.R  multiplot.R
src/: data.py  main.ipynb  utils.py
src/api/v1/: ar_hmm.py  covariate_ar_hmm.py  covariate_hmm.py
src/api/v2/: ar_hmm_constrained.py  ar_prior_hmm.py  ar_prior_hmm_constrained.py  covariate_ar_hmm.py  covariate_hmm.py  stationary_hmm.py
src/api/v3/: ar_prior_hmm.py  (+2 more)
src/base/: __init__.py  base_emission.py  base_hmm.py  base_inference.py  base_optimizer.py  base_output.py  base_param.py  base_solver.py  base_transition.py  base_working_param_set.py  emmision.py  hmm.py  hmm_params.py  transition.py  utils.py
src/config/: modelnames.py
src/distribution/: base.py  base_dist.py  gauss.py  gaussian_emission.py  utils.py
src/hmm/: static_hmm.py  stationary_hmm.py  utils.py
src/models/: ar_hmm.py  covariate_ar_hmm.py  covariate_hmm.py  stationary_hmm.py
src/optim/: __init__.py  base.py  lbfgs.py  likelihood_grad.py  loss.py  minimizer.py
(+98 files in other folders)
